# structured-text-utils

./: README.md  dist.sh  structured-text-utils.rb
jsed/: .gitignore  build.sh  convert-js-to-header.rb  fetch-dependencies.sh  install.sh  invoker.cpp  js.cpp  jsed.cpp  jsed.js  make_deps.sh  readme.markdown  readme.md  test.js  todo.txt
jsed/filter/: build.sh  fdstream.hpp  filter-test.cpp  filter.cpp  filter.h
jsed/js/: build.sh  js.cpp  js.h
stpl/: Stpl.hs  build.sh  readme.md  stpl.cabal  test.sh
stpl/tests/: all_types_test.sh  directory_group_test.sh  motivating_test.sh  non_object_root_test.sh  stdin_test.sh  template_as_arg_test.sh
yaml2json/: Yaml2json.hs  build.sh  readme.md  test.sh  yaml2json.cabal
yaml2json/tests/: mapping_arrays.test.sh  mapping_objects.test.sh
